deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-app
  namespace: staging
  labels:
    app: pod-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-app
  template:
    metadata:
      labels:
        app: pod-app
    spec:
      containers:
#enter your container name here
      - name: container_name
#input your docker image here
        image: image_name
        ports:
        - containerPort: 3000
