service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eks-service
  namespace: staging
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: pod-app
